Fix /events endpoint